# consensus_peaks

./: .gitignore  README.md  consensus_peaks.ipynb  pyproject.toml  requirements.txt
consensus_peaks/: __init__.py  consensus_peaks.py  consensus_signal.py  constants.py  individual_rpeaks.py
consensus_peaks/detectors/: cleaning.py  detection.py
consensus_peaks/plotting/: plot_consensus_peaks.py  plot_consensus_signal.py  plot_individual_rpeaks.py
tests/: generate_wfdb.py  test_consensus_peaks.py  test_consensus_signal.py  test_individual_rpeaks.py
